--- a/ressources/css/headerSearch.css
+++ b/ressources/css/headerSearch.css
@@ -1,200 +1,200 @@
 
 @media screen and (max-width: 700px) {
 	
-			/* Custom scrollbar for webkit aka chrome & co */
-			::-webkit-scrollbar {
-				width: 24px;
-				height: 24px;
-			}
-			 
-			/* Track */
-			::-webkit-scrollbar-track {
-				-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-				-webkit-border-radius: 24px;
-				border-radius: 24px;
-			}
-			 
-			/* Handle */
-			::-webkit-scrollbar-thumb {
-				-webkit-border-radius: 24px;
-				border-radius: 24px;
-				background: rgba(220,100,50,0.8); 
-				-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
-			}
-			::-webkit-scrollbar-thumb:window-inactive {
-				background: rgba(200,50,25,0.4); 
-			}
+	/* Custom scrollbar for webkit aka chrome & co */
+	::-webkit-scrollbar {
+		width: 24px;
+		height: 24px;
+	}
+	 
+	/* Track */
+	::-webkit-scrollbar-track {
+		-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+		-webkit-border-radius: 24px;
+		border-radius: 24px;
+	}
+	 
+	/* Handle */
+	::-webkit-scrollbar-thumb {
+		-webkit-border-radius: 24px;
+		border-radius: 24px;
+		background: rgba(220,100,50,0.8); 
+		-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+	}
+	::-webkit-scrollbar-thumb:window-inactive {
+		background: rgba(200,50,25,0.4); 
+	}
 
-			/* BODY */
+	/* BODY */
 
-			body {
-				color: black; 
-				background-color: #E0E0E0;
-				font-size: 100%;
-				font-family: 'Tahoma', sans-serif; 
-				left:0%;
-			}
-			div#site {
-				margin-left: -8px;
-				display:block;
-				width:100%;
-				top:50%;
-				left:50%;
-			}
-
-
-			/*HEADER inculdes navigation*/
-
-			div#header {
-				display:block;
-				position:fixed;
-				float:left;
-				width:100%;
-				height:80px;
-				background-color: #385a8f;
-				box-shadow: 0px 1px 15px #111;
-			}
-
-			div#logo {
-				display:inline;
-				float:left;
-				font-size: 70px; 
-				width: 80px;
-				height: 80px;
-				font-weight: bold;
-				text-align: center;
-				background-color: #444;
-				border: 5px;
-				border-color: black;
-
-			}
-			
-			div#logo a:link {
-				color: white; text-decoration: none;
-			}
-
-			div#logo a:visited {
-				color: white; text-decoration: none;
-			}
-
-			div#logo a:hover {
-				color: black; font-weight: bolder; text-decoration: none;
-			}
-
-			div#logo a:active {
-				color: white; font-weight: bolder; text-decoration: none;
-			}
+	body {
+		color: black; 
+		background-color: #E0E0E0;
+		font-size: 100%;
+		font-family: 'Tahoma', sans-serif; 
+		left:0%;
+	}
+	div#site {
+		margin-left: -8px;
+		display:block;
+		width:100%;
+		top:50%;
+		left:50%;
+	}
 
 
-			/*Searchbar*/
-			div.searchbar {
-				display: block;
-				float:inherit;
-				font-size: 80%;
-				width:100%;
-				min-width: 100%;
-				height: 100%;
-				color: #fff;
-				/*background: #4e80cc;*/
-			}
-			div.searchbar ul {
-				list-style:none;
-			}
-			div.searchbar ul li{
-				display:inline;
-				height: 100%;
-			}
-			div.searchbar ul li input.searchtext {
-				width: 90%;
+	/*HEADER inculdes navigation*/
 
-				height:80%;
-			}
+	div#header {
+		display:block;
+		position:fixed;
+		float:left;
+		width:100%;
+		height:80px;
+		background-color: #385a8f;
+		box-shadow: 0px 1px 15px #111;
+	}
 
-			/* NAVIGATION */
+	div#logo {
+		display:inline;
+		float:left;
+		font-size: 70px; 
+		width: 80px;
+		height: 80px;
+		font-weight: bold;
+		text-align: center;
+		background-color: #444;
+		border: 5px;
+		border-color: black;
 
-			div#navigation {
-				display:block;
-				float: left;
-				width:100%;
-				height:80px;
-				font-size: 100%;
+	}
+	
+	div#logo a:link {
+		color: white; text-decoration: none;
+	}
 
-			}
+	div#logo a:visited {
+		color: white; text-decoration: none;
+	}
 
-			/*DROPDOWN MENU*/
+	div#logo a:hover {
+		color: black; font-weight: bolder; text-decoration: none;
+	}
 
-			ul.topnav {
-				list-style: none;
-				display: inline;
-				padding: 0 0;	
-				/*margin-left: 40%;*/
-				float: right;
-				width: 35%;
-				/*background: #222;*/
-				font-size: 1.5em;
+	div#logo a:active {
+		color: white; font-weight: bolder; text-decoration: none;
+	}
 
-				/*background: url(topnav_bg.gif) repeat-x;*/
-			}
-			ul.topnav li {
-				width: 30%;
-				float: right;
-				padding: 0 5px 0 0;
-				position: relative; --Declare X and Y axis base for sub navigation--*/
-			}
-			ul.topnav li a{
-				padding: 20px 0px;
-				height: 100%;
-				color: #fff;
-				display: inline;
-				text-decoration: none;
-				float: right;
-			}
-			ul.topnav li a:hover{
-				color:#bbb;
-			/*	border-top: 1px solid #252525; /*--Create bevel effect--*/
-			}
-			ul.topnav li span { /*--Drop down trigger styles--*/
-				height: 100%;
-				float: left;
-				/*background: url(subnav_btn.gif) no-repeat center top;*/
-			}
-			ul.topnav li span.subhover {
-				background-position: center bottom; 
-				cursor: pointer;
 
-				} /*--Hover effect for trigger--*/
-			ul.topnav li ul.subnav {
-				list-style: none;
-				position: absolute; /*--Important - Keeps subnav from affecting main navigation flow--*/
-				right: 0; top: 55px;
-					font-size: 100%;
-				background: #385a8f;
-				margin: 0; padding: 0;
-				font-size: 0.8em;
-				display: none;
-				float: right;
-				width: 150px;
-				/*border: 1px solid #111;*/
-				box-shadow: 0px 1px 15px #111;
-			}
-			ul.topnav li ul.subnav li{
-				margin: 0; padding: 0;
-				border-top: 1px solid #252525; /*--Create bevel effect--*/
-				border-bottom: 1px solid #444; /*--Create bevel effect--*/
-				clear: both;
-				width: 150px;
-			}
+	/*Searchbar*/
+	div.searchbar {
+		display: block;
+		float:inherit;
+		font-size: 80%;
+		width:100%;
+		min-width: 100%;
+		height: 100%;
+		color: #fff;
+		/*background: #4e80cc;*/
+	}
+	div.searchbar ul {
+		list-style:none;
+	}
+	div.searchbar ul li{
+		display:inline;
+		height: 100%;
+	}
+	div.searchbar ul li input.searchtext {
+		width: 90%;
 
-			html ul.topnav li ul.subnav li a {
-				float: left;
-				width: 195px;
-				/*background: #333 url(dropdown_linkbg.gif) no-repeat 10px center;*/
-				padding-left: 20px;
-			}
-			html ul.topnav li ul.subnav li a:hover { /*--Hover effect for subnav links--*/
-				background: #6A80A2;
-				color: #eee;
-			}
+		height:80%;
+	}
+
+	/* NAVIGATION */
+
+	div#navigation {
+		display:block;
+		float: left;
+		width:100%;
+		height:80px;
+		font-size: 100%;
+
+	}
+
+	/*DROPDOWN MENU*/
+
+	ul.topnav {
+		list-style: none;
+		display: inline;
+		padding: 0 0;	
+		/*margin-left: 40%;*/
+		float: right;
+		width: 35%;
+		/*background: #222;*/
+		font-size: 1.5em;
+
+		/*background: url(topnav_bg.gif) repeat-x;*/
+	}
+	ul.topnav li {
+		width: 30%;
+		float: right;
+		padding: 0 5px 0 0;
+		position: relative; --Declare X and Y axis base for sub navigation--*/
+	}
+	ul.topnav li a{
+		padding: 20px 0px;
+		height: 100%;
+		color: #fff;
+		display: inline;
+		text-decoration: none;
+		float: right;
+	}
+	ul.topnav li a:hover{
+		color:#bbb;
+	/*	border-top: 1px solid #252525; /*--Create bevel effect--*/
+	}
+	ul.topnav li span { /*--Drop down trigger styles--*/
+		height: 100%;
+		float: left;
+		/*background: url(subnav_btn.gif) no-repeat center top;*/
+	}
+	ul.topnav li span.subhover {
+		background-position: center bottom; 
+		cursor: pointer;
+
+		} /*--Hover effect for trigger--*/
+	ul.topnav li ul.subnav {
+		list-style: none;
+		position: absolute; /*--Important - Keeps subnav from affecting main navigation flow--*/
+		right: 0; top: 55px;
+			font-size: 100%;
+		background: #385a8f;
+		margin: 0; padding: 0;
+		font-size: 0.8em;
+		display: none;
+		float: right;
+		width: 150px;
+		/*border: 1px solid #111;*/
+		box-shadow: 0px 1px 15px #111;
+	}
+	ul.topnav li ul.subnav li{
+		margin: 0; padding: 0;
+		border-top: 1px solid #252525; /*--Create bevel effect--*/
+		border-bottom: 1px solid #444; /*--Create bevel effect--*/
+		clear: both;
+		width: 150px;
+	}
+
+	html ul.topnav li ul.subnav li a {
+		float: left;
+		width: 195px;
+		/*background: #333 url(dropdown_linkbg.gif) no-repeat 10px center;*/
+		padding-left: 20px;
+	}
+	html ul.topnav li ul.subnav li a:hover { /*--Hover effect for subnav links--*/
+		background: #6A80A2;
+		color: #eee;
+	}
 }
 
 
@@ -202,165 +202,182 @@
 
 @media screen and (min-width: 701px) {
 
-			/* Custom scrollbar for webkit aka chrome & co */
-			::-webkit-scrollbar {
-				width: 24px;
-				height: 24px;
-			}
-			 
-			/* Track */
-			::-webkit-scrollbar-track {
-				-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-				-webkit-border-radius: 24px;
-				border-radius: 24px;
-			}
-			 
-			/* Handle */
-			::-webkit-scrollbar-thumb {
-				-webkit-border-radius: 24px;
-				border-radius: 24px;
-				background: rgba(220,100,50,0.8); 
-				-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
-			}
-			::-webkit-scrollbar-thumb:window-inactive {
-				background: rgba(200,50,25,0.4); 
-			}
+	/* Custom scrollbar for webkit aka chrome & co */
+	::-webkit-scrollbar {
+		width: 24px;
+		height: 24px;
+	}
+	 
+	/* Track */
+	::-webkit-scrollbar-track {
+		-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+		-webkit-border-radius: 24px;
+		border-radius: 24px;
+	}
+	 
+	/* Handle */
+	::-webkit-scrollbar-thumb {
+		-webkit-border-radius: 24px;
+		border-radius: 24px;
+		background: rgba(220,100,50,0.8); 
+		-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+	}
+	::-webkit-scrollbar-thumb:window-inactive {
+		background: rgba(200,50,25,0.4); 
+	}
 
-			/* BODY */
+	/* BODY */
 
-			body {
-				color: black; 
-				background-color: #E0E0E0;
-				font-size: 100%;
-				font-family: 'Tahoma', sans-serif; 
-				left:0%;
-			}
-			div#site {
-				margin-left: -8px;
-				display:block;
-				width:100%;
-				top:50%;
-				left:50%;
-			}
+	body {
+		color: black; 
+		background-color: #E0E0E0;
+		font-size: 100%;
+		font-family: 'Tahoma', sans-serif; 
+	}
+	div#site {
+		margin-left: -8px;
+		display:block;
+		width:100%;
+	}
 
-			/*HEADER inculdes navigation*/
+	/*HEADER inculdes navigation*/
 
-			div#header {
-				display:block;
-				position:fixed;
-				float:left;
-				margin-top: 16px;
-				width:100%;
-				height:50px;
-				color: white;
-				background-color: #385a8f;
-				box-shadow: 0px 0px 20px #111;
-			}
+	div#header {
+		display:block;
+		position:fixed;
+		float:left;
+		margin-top: -8px;
+		width:100%;
+		height:50px;
+		color: white;
+		background-color: #385a8f;
+		box-shadow: 0px 0px 20px #111;
+	}
 
-			div#logo {
-				display:inline;
-				float:left;
-				font-size: 45px; 
-				width: 50px;
-				height: 50px;
-				font-weight: bold;
-				text-align: center;
-				background-color: #444;
+	div#logo {
+		display:inline;
+		float:left;
+		font-size: 45px; 
+		width: 50px;
+		height: 50px;
+		font-weight: bold;
+		text-align: center;
+		background-color: #444;
 
-			}
-			div#logo a:link {
-				color: white; text-decoration: none;
-			}
+	}
+	div#logo a:link {
+		color: white; text-decoration: none;
+	}
 
-			div#logo a:visited {
-				color: white; text-decoration: none;
-			}
+	div#logo a:visited {
+		color: white; text-decoration: none;
+	}
 
-			div#logo a:hover {
-				color: black; font-weight: bolder; text-decoration: none;
-			}
+	div#logo a:hover {
+		color: black; font-weight: bolder; text-decoration: none;
+	}
 
-			div#logo a:active {
-				color: white; font-weight: bolder; text-decoration: none;
-			}
+	div#logo a:active {
+		color: white; font-weight: bolder; text-decoration: none;
+	}
 
-			/*Searchbar*/
+	/*Searchbar*/
 
-			div.searchbar {
-				display: inline-block;
-				float:left;
-				font-size: 100%;
-				width:340px;
-				height: 100%;
-				color: #fff;
-				/*background: #4e80cc;*/
-			}
+	div.searchbar {
+		display: inline-block;
+		float:left;
+		font-size: 100%;
+		width:340px;
+		height: 100%;
+		color: #fff;
+		/*background: #4e80cc;*/
+	}
 
-			div.searchbar div{
-				top: 2px; left: 0px;
-				position: relative;
-				display:inline;
-				height: auto;
-			}
+	div.searchbar div{
+		top: 2px; left: 0px;
+		position: relative;
+		display:inline;
+		height: auto;
+	}
 
-			div.searchbar input.searchtext {
-				width: 330px;
-				height:16px;
-			}
-			/* NAVIGATION */
+	div.searchbar input.searchtext {
+		width: 330px;
+		height:16px;
+	}
+	/* NAVIGATION */
 
-			div#navigation {
-				float: right;
-				width:30%;
-				height:50px;
+	div#navigation {
+		float: right;
+		width:30%;
+		height:50px;
 
-			}
+	}
 
-			/*DROPDOWN MENU*/
+	/* MENU*/
 
-			.topnav {
-				/*margin-left: 40%;*/
-				/*float: right;
-				width: 250px;*/
-				/*background: #222;*/
-				margin-left: 15px;
+	.topnav {
+		/*margin-left: 40%;*/
+		/*float: right;
+		width: 250px;*/
+		/*background: #222;*/
+		margin-left: 15px;
 
-				/*background: url(topnav_bg.gif) repeat-x;*/
-			}
+		/*background: url(topnav_bg.gif) repeat-x;*/
+	}
 
-			.topnav div {
-				padding-right: 5px;
-				/*position: relative; --Declare X and Y axis base for sub navigation--*/
-			}
+	.topnav div {
+		padding-right: 5px;
+		/*position: relative; --Declare X and Y axis base for sub navigation--*/
+	}
 
-			.main {
-				float: left;
-				margin-left: 15px;
-			}
-			.social {
-				float: right;
-				margin-right: 15px;
-			}
+	.main {
+		float: left;
+		margin-left: 15px;
+	}
+	.social {
+		float: right;
+		margin-left: 15px;
+	}
 
-			.topnav a {
-				color: #fff;
-				text-decoration: none;
-			}
-			.topnav a:hover {
-				color:#bbb;
-			/*	border-top: 1px solid #252525; /*--Create bevel effect--*/
-			}
+	.topnav a {
+		color: #fff;
+		text-decoration: none;
+	}
+	.topnav a:hover {
+		color:#bbb;
+	/*	border-top: 1px solid #252525; /*--Create bevel effect--*/
+	}
 
+	div#profilenav {
+	}
 
-			html ul.topnav li ul.subnav li a {
-				float: left;
-				width: 195px;
-				/*background: #333 url(dropdown_linkbg.gif) no-repeat 10px center;*/
-				padding-left: 20px;
-			}
-			html ul.topnav li ul.subnav li a:hover { /*--Hover effect for subnav links--*/
-				background: #6A80A2;
-				color: #eee;
-			}
+	div#profileline {
+		position: absolute;
+		right: 26px;
+		top: 2px;
+		font-size: small;
+	}
+
+	div#profileline img {
+		vertical-align: bottom;
+	}
+
+	div#profilenav a:visited {
+		text-decoration: none;
+		color: white;
+		font-weight: lighter;
+	}
+
+	div#profilenav a:link {
+		text-decoration: none;
+		color: white;
+		font-weight: lighter;
+	}
+
+	div#profilenav a:hover {
+		text-decoration: none;
+		color: white;
+		font-weight: bold;
+	}
 }
 
