--- a/ressources/css/view.css
+++ b/ressources/css/view.css
@@ -41,9 +41,8 @@ div#content {
 */
 .table {
 	display: table;
-	margin-left: 5%;
-	margin-right: 5%;
-	width: 90%;
+	width: 100%;
+	vertical-align: middle;
 }
 
 .row {
@@ -51,54 +50,71 @@ div#content {
 	vertical-align: middle;
 }
 
-.paint {
-	padding: 5px;
-	background-color: #7600C9;
-	margin: 1%;
-	text-align: center;
-}
 
-#topneightbour {  
+#topneightbour { 
 	width: 960px;
 	height: 100px;
+	float: left;
+	vertical-align: bottom;
 	background-position: bottom;
 	background-size: 100% 500%;
+	box-shadow: 0px 0px 10px #111;
 }
 #rightneightbour {
-	width: 110px;
+	width: 100px;
 	height: 640px;
+	float: left;
 	background-position: left;
 	background-size: 900% 100%;
+	box-shadow: 0px 0px 10px #111;
 }
 #bottomneightbour {
 	width: 960px;
 	height: 100px;
+	float: left;
+	vertical-align: top;
 	background-position: top;
 	background-size: 100% 500%;
+	box-shadow: 0px 0px 10px #111;
 }
 #leftneightbour {
-	width: 110px;
+	width: 100px;
 	height: 640px;
+	float: left;
 	background-position: right;
 	background-size: 900% 100%;
+	box-shadow: 0px 0px 10px #111;
 }
 
-.image {
-	width:2%;
-	display: table-cell;
-	/*border: 1px solid black;*/
+#painthorz {
+	background-color: #7600C9;
 	text-align: center;
-	background-color: white;
-	vertical-align: top;
-	width:800px; height:500px;
-	background-size: 100% 100%;
+	width: 960px;
+	height: 100px;
+	vertical-align: middle;
+	/*border: 1px solid black;*/
+	float: left;
+	box-shadow: 0px 0px 10px #111;
 }
 
-.cell {
-	display: table-cell;
+#paintvert {
+	background-color: #7600C9;
+	text-align: center;
+	width: 100px;
+	height: 640px;
+	vertical-align: middle;
+	/*border: 1px solid black;*/
+	float: left;
+	box-shadow: 0px 0px 10px #111;
+}
+
+.corner {
+	width: 100px;
+	height: 100px;
 	vertical-align: middle;
 	/*border: 1px solid black;*/
 	background-color: white;
+	float: left;
 	box-shadow: 0px 0px 10px #111;
 }
 
