--- a/ressources/css/scribble.css
+++ b/ressources/css/scribble.css
@@ -132,10 +132,19 @@ canvas#canvas {
 }
 
 #clear{
-	margin-left: 5px;
+	margin-top: 10px;
+	float: left;
 	width: 120px;
 	height: 20px;
 	background-color:lightgrey;
+}
+
+#clear:hover{
+	width: 118px;
+	height: 18px;
+	border-style:solid;
+	border-width:1px;
+	border-color: white;
 }
 
 #publish{
@@ -147,28 +156,51 @@ canvas#canvas {
 
 }
 
+#publish:hover{
+	width: 118px;
+	height: 38px;
+	border-style:solid;
+	border-width:1px;
+	border-color: white;
+}
+
 #stepback{
-	margin-left: 5px;
-	
+	margin-top: 10px;
 	width: 55px;
-	height: 30px;
+	height: 20px;
 	background-color: lightgrey;
 	float: left;
+}
+
+#stepback:hover{
+	width: 53px;
+	height: 18px;
+	border-style:solid;
+	border-width:1px;
+	border-color: white;
 }
 
 #stepforward{
-	margin-left: 10px;
+	margin-top: 10px;
 	width: 55px;
-	height: 30px;
+	height: 20px;
 	background-color: lightgrey;
-	float: left;
+	float: right;
+}
+
+#stepforward:hover{
+	width: 53px;
+	height: 18px;
+	border-style:solid;
+	border-width:1px;
+	border-color: white;
 }
 
 #color1{
-	margin-left: 5px;
-	width: 40px;
-	height: 120px;
-	background-color: lightgrey;
+	
+	width: 120px;
+	height: 80px;
+	background-color: darkgrey;
 	float: left;
 }
 
@@ -179,11 +211,27 @@ canvas#canvas {
 	float: left;
 }
 
+#cbox:hover{
+	width: 38px;
+	height: 38px;
+	border-style:solid;
+	border-width:1px;
+	border-color: white;
+}
+
 #cbox1{
 	width: 40px;
 	height: 40px;
 	background-color: green;
 	float: left;
+}
+
+#cbox1:hover{
+	width: 38px;
+	height: 38px;
+	border-style:solid;
+	border-width:1px;
+	border-color: white;
 }
 
 #cbox2{
@@ -193,6 +241,14 @@ canvas#canvas {
 	float: left;
 }
 
+#cbox2:hover{
+	width: 38px;
+	height: 38px;
+	border-style:solid;
+	border-width:1px;
+	border-color: white;
+}
+
 #cbox3{
 	width: 40px;
 	height: 40px;
@@ -200,25 +256,138 @@ canvas#canvas {
 	float: left;
 }
 
+#cbox3:hover{
+	width: 38px;
+	height: 38px;
+	border-style:solid;
+	border-width:1px;
+	border-color: white;
+}
 
-#brush{
-	
-	float: right;
-	margin-right: 5px;
+#cbox4{
 	width: 40px;
-	height: 120px;
+	height: 40px;
+	background-color: FFFF00;
+	float: left;
+}
+
+#cbox4:hover{
+	width: 38px;
+	height: 38px;
+	border-style:solid;
+	border-width:1px;
+	border-color: white;
+}
+
+#cbox5{
+	width: 40px;
+	height: 40px;
+	background-color: FF00FF;
+	float: left;
+}
+
+#cbox5:hover{
+	width: 38px;
+	height: 38px;
+	border-style:solid;
+	border-width:1px;
+	border-color: white;
+}
+
+
+#shadow{
+	margin-top: 20px;
+	float: left;
+	margin-right: 5px;
+	width: 120px;
+	height: 20px;
+	background-color: lightgrey;
+	text-align: center;
+}
+
+#shadow:hover{
+	width: 118px;
+	height: 18px;
+	border-style:solid;
+	border-width:1px;
+	border-color: white;
+}
+
+#block{
+	margin-top: 20px;
+	float: left;
+	margin-right: 5px;
+	width: 120px;
+	height: 20px;
+	background-color: lightgrey;
+	text-align: center;
+}
+
+#block:hover{
+	width: 118px;
+	height: 18px;
+	border-style:solid;
+	border-width:1px;
+	border-color: white;
+}
+
+#round{
+	margin-top: 20px;
+	float: left;
+	margin-right: 5px;
+	width: 120px;
+	height: 20px;
+	background-color: lightgrey;
+	text-align: center;
+}
+
+#round:hover{
+	width: 118px;
+	height: 18px;
+	border-style:solid;
+	border-width:1px;
+	border-color: white;
+}
+
+#split{
+	margin-top: 20px;
+	float: left;
+	margin-right: 5px;
+	width: 120px;
+	height: 20px;
+	background-color: lightgrey;
+	text-align: center;
+}
+
+#split:hover{
+	width: 118px;
+	height: 18px;
+	border-style:solid;
+	border-width:1px;
+	border-color: white;
+}
+
+#rubber{
+	margin-top: 10px;
+	float: left;
+	width: 120px;
+	height: 20px;
 	background-color: lightgrey;
 }
-#rubber{
-	margin-left: 5px;
-	width: 120px;
-	height: 40px;
-	background-color: lightgrey;
+
+
+#rubber:hover{
+	width: 118px;
+	height: 18px;
+	border-style:solid;
+	border-width:1px;
+	border-color: white;
 }
 
 #bar{
 
-margin-top: 160px;
+margin-top: 140px;
+font-size: 14px;
 }
 
 #resultDicke{
@@ -235,4 +404,12 @@ margin-top: 160px;
 	height: 20px;
 	background-color:grey;
 	color: white;
+}
+
+#blackbox{
+
+	background-color: transparent;
+	width: 110px;
+	height: 140px;
+	text-align: center;
 }
