--- a/ressources/css/headerSearch.css
+++ b/ressources/css/headerSearch.css
@@ -255,7 +255,7 @@
 		position:fixed;
 		float:left;
 		width:100%;
-		height:50px;
+		height:80px;
 		color: white;
 		background-color: #385a8f;
 		box-shadow: 0px 0px 20px #111;
@@ -265,13 +265,7 @@
 	div#logo {
 		display:inline;
 		float:left;
-		font-size: 45px; 
-		width: 50px;
-		height: 50px;
-		font-weight: bold;
-		text-align: center;
-		background-color: #444;
-
+		
 	}
 	div#logo a:link {
 		color: white; text-decoration: none;
@@ -360,21 +354,23 @@
 	}
 
 	div#profilenav {
-		display: block;
-	}
+		margin-top: 10px;
+		margin-left: 800px;
+		float: left;	
+}
 
 	div#profileicons {
 	}
 
 	div#profileline {
-		position: absolute;
-		right: 26px;
+	
+		
 		top: 2px;
-		font-size: small;
+		font-size: medium;
 	}
 
 	div#profileline img {
-		vertical-align: bottom;
+		
 	}
 
 	div#profilenav a:visited {
